<?xml version="1.0"?>
<package format="2">
  <name>app_manager_plugins</name>
  <version>0.0.0</version>
  <description>The app_manager_plugins package</description>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>app_manager</exec_depend>

  <export>
    <app_manager app_dir="${prefix}/apps"/>
    <app_manager plugin="${prefix}/app_manager_plugins.yaml" />
  </export>
</package>
