<?xml version="1.0"?>
<package format="2">
  <name>app_notification_saver</name>
  <version>0.0.0</version>
  <description>The app_notification_saver package</description>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author email="708yamaguchi@gmail.com">Naoya Yamaguchi</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
