<?xml version="1.0"?>
<package format="3">
  <name>app_notifier</name>
  <version>0.0.0</version>
  <description>The app_notifier package</description>
  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
  <exec_depend>app_manager</exec_depend>
  <exec_depend>app_manager_plugin</exec_depend>

  <export>
  </export>
</package>
