<?xml version="1.0"?>
<package format="2">
  <name>app_scheduler</name>
  <version>0.0.0</version>
  <description>The scheduler for app_manager package</description>
  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>app_manager</exec_depend>
  <exec_depend>roseus</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <app_manager app_dir="${prefix}/apps"/>
  </export>
</package>
