<?xml version="1.0"?>
<package format="3">
  <name>test_app_manager</name>
  <version>0.0.5</version>
  <description>The test_app_manager package</description>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-setuptools</buildtool_depend>

  <exec_depend>app_manager</exec_depend>
  <exec_depend>pr2_gazebo</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- <app_manager app_dir="${prefix}/apps"/> -->
    <app_manager plugin="${prefix}/test_app_manager_plugin.yaml" />
  </export>
</package>
